SAK-20791
git-svn-id: https://source.sakaiproject.org/svn/announcement/trunk@94290 66ffb92e-73f9-0310-93c1-f5514f145a0a